# yw-look

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  PLAN.md  README.md  ToDo.md  bench.html  eslint.config.js  index.html  package-lock.json  package.json  selftest.html  shot.html  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci-cpp-backend.yml  ci.yml  release.yml
docs/: PLAN.md  TODO.md  autonomous-debugging.md  benchmarks.md  license-notes.md  non-usd-rust-backend-evaluation.md  optional-loader-packs.md  release-distribution.md  usd-cpp-poc.md  usd-cpp.md  usd-phase0.md  usd-phase2.md  usd.md
samples/: README.md  manifest.example.json  manifest.json  sources.md
samples/assets/dae/: TinyTetrahedron.dae
samples/assets/exr/: piz_compressed.exr
samples/assets/gltf/: Duck.gltf
samples/assets/hdr/: venice_sunset_1k.hdr
samples/assets/ply/: dolphins.ply
samples/assets/stl/: TinyTetrahedronAscii.stl  slotted_disk.stl
samples/assets/tga/: crate_grey8.tga
samples/assets/usd/: tiny.usda  tiny_alpha.usda  tiny_broken_ref.usda  tiny_material.usda  tiny_payload.usda  tiny_point_instancer.usda  tiny_rigged.usda  tiny_rigged_blend.usda  tiny_timed.usda  tiny_trs.usda
samples/private/: fetch.mjs  models.json
scripts/: batch-load-test.mjs  compare-load-bench.mjs  count-tests.mjs  extract-openusd-prebuilt.mjs  fixture-regression.mjs  flip-compare.mjs  index.html  package-openusd-prebuilt.mjs  prepare-local-update-feed.mjs  preview-model.mjs  run-load-bench.mjs  run-selftest.mjs  run-shot.mjs  run-tauri.mjs  serve-local-update-feed.mjs  sign-macos-release-helpers.sh  verify-sample-layout.mjs  viewport-snapshot.mjs  visual-regression.mjs
src/: App.tsx  entry.ts  main.tsx  selftest.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.json  tauri.windows.json  vcpkg-configuration.json  vcpkg.json
src-tauri/alembic-tools/arm64-osx/: README.md  abc_to_obj
src-tauri/alembic-tools/src/: abc_to_obj.cpp
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/usd/: backend.rs  glb.rs  mod.rs  openusd_backend.rs  openusd_cpp_backend.rs  stage_state.rs  types.rs
src-tauri/src/usd/cpp_sys/: mod.rs
src-tauri/tests/: cpp_backend_geometry.rs  cpp_backend_inspector.rs  cpp_backend_native_instancing.rs  cpp_backend_payload_session.rs  cpp_backend_point_instancer.rs  private_kitchen_payload_warnings.rs  private_kitchen_set.rs
src-tauri/triplets/: arm64-osx.cmake
src/__tests__/: setup.ts
src/bench/: BenchRunner.tsx  benchRuntime.ts  benchTypes.ts  entry.tsx
src/components/: AnimationBar.tsx  AppStatusBar.tsx  AssetViewport.tsx  CompactMetricRows.tsx  CompositionArcsCard.tsx  CurrentFileCard.tsx  DiagnosticsCard.tsx  FileBrowserCard.tsx  HierarchyCard.tsx  IntegrationCard.tsx  LoadingScreen.tsx  MaterialListCard.tsx  MenuBar.tsx  MetadataCard.tsx  ObjectInspectorCard.tsx  PerformanceCard.tsx  RecentFilesCard.tsx  SceneLightsCamerasCard.tsx  SettingsCard.tsx  SidebarTabIcons.tsx  SidebarTabs.tsx  TextureListCard.tsx  UpdateCard.tsx  UsdInspectorCard.tsx  UsdPrimPropertyPanel.tsx  UsdSourceCard.tsx  ViewerStatePanel.tsx  ViewportControls.tsx  ViewportToolIcons.tsx  WarningsCard.tsx  animation.ts  appStatusItems.ts  assetMetadata.ts  debugPanelFixtures.ts  morphTargets.ts  sidebarPrimitives.tsx  sidebarTabItems.tsx
src/components/__tests__/: AssetViewportMorphTargets.test.tsx  DiagnosticsBadges.test.tsx  DiagnosticsCard.test.tsx  HierarchyCard.test.tsx  MaterialListCard.test.tsx  SceneLightsCamerasCard.test.tsx  UpdateCard.test.tsx  UsdSourceCard.test.tsx  ViewerStatePanel.test.tsx
src/components/toolbar/: PopoverTool.tsx  ToolbarPopover.tsx  build3DToolbar.ts  buildImageToolbar.ts  types.ts
src/components/ui/: Button.tsx  FieldRow.tsx  IconTabButton.tsx  ToggleSwitch.tsx  Tooltip.tsx  index.ts
src/lib/: alembic.ts  diagnostics.ts  files.ts  integrations.ts  menu-definition.json  menu.ts  platform.ts  recentFiles.ts  settings.ts  updater.ts  usd.ts  viewerShortcuts.ts
src/lib/__tests__/: viewerShortcuts.test.ts
src/shot/: ShotRunner.tsx  entry.tsx  shotRuntime.ts
src/styles/: design-system.css  sidebar.css  toolbar-popover.css  viewport.css
src/types/: moeru-three-mmd.d.ts
src/viewer/: animationController.ts  highlight.ts  index.ts  loaderRegistry.ts  loaders.ts  metadata.ts  prefetchCache.ts  scene.ts  screenshot.ts  texture.ts  types.ts  usdWorkerLoader.ts
src/viewer/__tests__/: alembicLoader.test.ts  ktx2Loader.test.ts  loaders.test.ts  materialShaderSlots.test.ts  metadata.test.ts  mmdLoader.test.ts  prefetchCache.test.ts  usdWorkerLoader.test.ts  vrmLoader.test.ts
src/workers/: usdLoader.worker.ts
tests/fixtures/: README.md  _generate.mjs  catalog.json
tests/fixtures/broken/: truncated.gltf
tests/fixtures/models/: triangle.gltf  triangle.ply  triangle.stl
tests/fixtures/textures/: 2d-uastc.ktx2  README.md  disturb-dxt1-nomip.dds
tests/visual/: README.md
